# MinecraftModpackManager

./: .gitignore  Dockerfile  NOTE.md  README.md  SECURITY.md  Structure.drawio  action.yml  com.mrquantumoff.mcmodpackmanager.appdata.xml  com.mrquantumoff.mcmodpackmanager.metainfo.xml  com.mrquantumoff.mcmodpackmanager.yml  dev.mrquantumoff.mcmodpackmanager.metainfo.xml  entry.sh  example.mcmodpackref  index.html  io.github.mrquantumoff.mcmodpackmanager.metainfo.xml  minecraft-modpack-manager.desktop  package.json  pnpm-lock.yaml  version.json  version.linux.json
.github/ISSUE_TEMPLATE/: question.md
.github/action/: action.yml
.github/workflows/: tauri.yml  test.yml
public/: splashscreen.html
src/: App.tsx  Interfaces.tsx  main.tsx  style.css  theme.ts
src-tauri/: Cargo.toml  build.rs  noupdatertauri.conf.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/src/: main.rs
src/common/: translation.ts
src/components/: heading.css  heading.tsx
src/components/decorations/: decorations.css  decorations.tsx
src/components/heading/: heading.css  heading.tsx
src/components/modpackInstaller/: Installer.tsx  installer.css
src/components/modpackInstaller-new/: Installer.tsx  installer.css
src/components/modpackinstaller/: installer.css  installer.tsx
src/components/modpackinstaller-legacy/: installer.css  installer.tsx
src/components/selector/: Selector.css  Selector.tsx
src/tools/: currentModpack.ts  getMinecraftFolder.ts
src/tools/translation/: i18n.ts
src/translations/: en.json  en.ts
