[package]
name = "mcmodpackmanager"
version = "1.3.1"
description = "My Minecraft modpack manager"
authors = ["Demir Yerli <mrquantumoff@protonmail.com>"]
license = "BSD-2-Clause"
repository = ""
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.0", features = [] }
winres = "0.1"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0", features = ["api-all", "config-json5", "reqwest-client", "updater", "windows7-compat"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
futures = "0.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = [ "custom-protocol" ]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
strip = true
lto = true
codegen-units = 1
