[package]
authors = ["Demir Yerli <mrquantumoff@protonmail.com>"]
description = "My Minecraft modpack manager"
edition = "2021"
license = "BSD-2-Clause"
name = "mcmodpackmanager"
repository = ""
version = "3.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "^1.2", features = [] }
winres = "0.1"

[dependencies]
reqwest = "^0.11"
serde = {version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
tauri = {version = "^1.2", features = ["api-all", "config-json5", "reqwest-client", "updater", "windows7-compat"] }
tauri-plugin-single-instance = {git = "https://github.com/tauri-apps/tauri-plugin-single-instance.git"}
tokio = {version = "^1", features = ["full"] }
zip = "^0.6"
zip-extensions = "^0.6"
[dev-dependencies]
futures = "^0.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
strip = true
